--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,7 +135,7 @@ button {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 190px;
+    min-height: 190px;
 }
 
 .menu-list {
@@ -159,17 +159,17 @@ button {
 }
 
 .event-button {
-     display: flex;
-     justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .next-event,
 .previous-event {
-     padding: 0;
-     border: none;
-     background: none;
-     font-size: 16px;
-     text-transform: uppercase;
+    padding: 0;
+    border: none;
+    background: none;
+    font-size: 16px;
+    text-transform: uppercase;
 }
 
 .main-content {
